sources += files(
    'configs/Constants.vala',
    'configs/Settings.vala',

    'controllers/AppController.vala',

    'dialogs/LoginDialog.vala',

    'models/ErrorObject.vala',
    'models/Folder.vala',
    'models/FolderCollection.vala',
    'models/Cipher.vala',

    'views/AppView.vala',

    'utils/NetworkUtils.vala',
    'utils/Crypto.vala',
    'utils/IO.vala',

    'widgets/AlignedLabel.vala',
    'widgets/EntryWithLabel.vala',
    'widgets/HeaderBar.vala',
    'widgets/Sidebar.vala',
    'widgets/CipherList.vala',
    'widgets/CipherItem.vala',
    'widgets/CipherPage.vala',
    'widgets/CipherHeader.vala',
    'widgets/OTPPanel.vala',
    'widgets/CircularProgressBar.vala',

    'models/Totp.vala',
    'models/Bitwarden.vala',
    'models/LibUUID.vala',
    'Application.vala',
    'Main.vala',
    'Window.vala'
)
